--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <p>Time programming quiz rules:</p>
         <ul>
           <li>You will have 90 seconds to complete the quiz.</li>
-          <li>You may skip as many questions as you like.</li>
-          <li>Answers can not be changed once selected.</li>
+          <li>You may skip as many questions as you like.</li> 
           <li>Incorrect answers will penalize your time by ten seconds.</li>
           <li>Correct answers will increase your score by 10 points.</li>
         </ul>
@@ -80,6 +79,29 @@
     <script src="./assets/js/script.js"></script>
     
 </body>
+<footer class="footer" class="footer">
+    <div  class="contact_title">
+        <div class="contact_me">
+            <h2><a id="Contact_Me"></a>Contact Me</h2>
+        </div>
+        <div class="text_contact">
+            <ul>
+                <li>
+                    <a href="#(203)555-555">(203)555-555</a>
+                </li>
+                <li>
+                    <a href="#cherifa@gmail.com">cherifa@gmail.com</a>
+                </li>
+                <li>
+                    <a href="#GitHub">GitHub</a>
+                </li>
+                <li>
+                    <a href="#Twitter">Twitter</a>
+                </li>
+            </ul>
+        </div> 
+    </div>
+</footer>
 
 </html>
 
