--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         
     </section>
 
-    <script src="./assets/js/question.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./Assets/js/questions.js"></script>
+    <script src="./Assets/js/script.js"></script>
     
 </body>
 <footer class="footer" class="footer">
